# ao-dev

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CURRENT_TRACING_APPROACH.md  LICENSE  Makefile  NEW_APPROACH_IMPLEMENTATION.md  README.md  SKILL.md  TRACING_TAINT.md  ao-tool-design.md  build_pyre_graph.py  conda-environment.yaml  conda-environment.yml  create_dependency_file.py  learning_cc_feature.md  learnings_cc_feature.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  pyre_reqs.txt  test_patch_verify.py  test_simple_taint.py  test_taint_pdf_reader.py  test_taint_pdf_writer.py  update_dependencies.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: deploy_to_ec2.sh
.github/workflows/: billable-reminder.yaml  billable-tests.yaml  deploy.yaml  deploy.yml  docs.yaml  docs.yml  python-package-conda.yml  test-billable.yml  test-deepresearch.yml  test-local.yml  tests.yaml  tests.yml
configs/: cache.yaml  copilot.yaml
docker/: backend.Dockerfile  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  frontend.Dockerfile  host-nginx-agops-project.conf  proxy.Dockerfile  start.sh
docs/: index.md  mkdocs.yaml
docs/api-reference/: ast-transformer.md  cli.md  index.md  taint-wrappers.md
docs/developer-guide/: ao-tool.md  api-patching.md  architecture.md  edge-detection.md  installation.md  server.md  taint-tracking.md  testing.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/media/: README.md
docs/user-guide/: claude-code.md  cli-commands.md  subruns.md  vscode-extension.md
evaluation/: README.md
example_workflows/: README.md  coroutine_taint_prototype.py  test_super_ast_transform.py
example_workflows/DeepResearch/: .env.template  single_task.py
example_workflows/DocBench/: evaluate.py  run.py
example_workflows/SWE-bench/: agent_advanced_reasoning.py  agent_basic.py  agent_multi_llm.py
example_workflows/chess_text2sql/: README.md
example_workflows/debug_examples/: anthropic_add_numbers.py  anthropic_async_add_numbers.py  anthropic_document_query.py  anthropic_image_tool_call.py  async_openai_chat.py  cleanup_test_files.py  crewai_multi_tool.py  crewai_research_writer.py  document_bullets.txt  document_summary.txt  langchain_agent.py  langchain_agent_team.py  langchain_async_agent.py  langchain_simple_chat.py  litellm_add_numbers.py  mcp_simple_test.py  multiple_runs_asyncio.py  multiple_runs_sequential.py  multiple_runs_threading.py  ollama_debate.py  ollama_native_add_numbers.py  openai_add_numbers.py  openai_async_debate.py  openai_chat.py  openai_document_query.py  openai_document_reader.py  openai_document_writer.py  openai_inline_docs.py  patch_debug.py  taint_prop.py  together_add_numbers.py  together_debate.py  vertexai_add_numbers.py  vertexai_gen_image.py  vertexai_streaming.py  vertexai_streaming_async.py  vllm_add_numbers.py  vllm_debate.py
example_workflows/debug_examples/langchain/: pyproject.toml
example_workflows/doc_bench/: README.md  evaluate.py  run.py  utils.py  your_agent_workflow.py  your_agents_register.py
example_workflows/mcp/: google_search.py
example_workflows/miroflow_deep_research/: README.md  pyproject.toml  single_task.py  test_subset.py
example_workflows/ours_doc_bench/: README.md
example_workflows/ours_human_eval/: README.md
example_workflows/ours_swe_bench/: README.md
find_errors/data_prep/: amadou_parse_tags.py  find_errors.py  prompt.txt  prompts.py
find_errors/error_models/: hmm_light.py
pyre_config/: .pyre_configuration
pyre_config/here/: dependency-graph.json  functions.json  modules.json  override-graph.json  taint-metadata.json  taint-output.json
pyre_config/here13/: call-graph.json  errors.json  functions.json  modules.json  override-graph.json  taint-metadata.json  taint-output.json
pyre_config/taint/: builtins.pysa  taint.config
src/: README.md  __init__.py
src/agent_copilot/: README.md  context_manager.py  develop.py  develop_server.py  develop_shim.py  launch_scripts.py
src/cli/: aco_config.py  aco_launch.py  aco_server.py  ao_config.py  ao_record.py  ao_server.py  ao_tool.py
src/common/: config.py  constants.py  logger.py  logging_config.py  utils.py
src/optimizations/: README.md  optimization_server.py
src/parser/: README.md  static_analysis.py
src/runner/: README.md  __init__.py  agent_runner.py  ast_rewrite_hook.py  context_manager.py  develop_shim.py  fstring_rewriter.py  launch_scripts.py  lessons.py  match_debug.ipynb  patch_constants.py  patching_import_hook.py  string_matching.py  taint_containers.py  taint_dict.py  taint_wrappers.py  unified_shim.py
src/runtime_tracing/: README.md  apply_monkey_patches.py  cache_manager.py  fstring_rewriter.py  function_cache.py  monkey_patches.py  sitecustomize.py  taint_wrappers.py  utils.py
src/server/: README.md  ast_helpers.py  ast_transformer.py  auth_app.py  cache_manager.py  database_manager.py  db.py  develop_server.py  edit_manager.py  file_watcher.py  git_versioner.py  main_server.py  taint_ops.py  taint_propagation.md
src/static_analysis/: static_analysis.py
src/telemetry/: SETUP.md  client.py  server_logger.py  snapshots.py  user_actions.py
src/user_interface/: README.md  package-lock.json  package.json  telemetry-settings.json  webpack.config.js
src/user_interfaces/: README.md  package-lock.json  package.json  user-interface.code-workspace
src/workflow_edits/: cache_manager.py  db.py  edit_manager.py  utils.py
testbed/try_out_repo/: main.py
testing/: README.md  simulate_shim.py  try.py
tests/: README.md  conftest.py  get_api_objects.py  test_api_calls.py  test_api_parser.py  test_caching.py  test_deep_research.py  test_determinism.py  test_inject_markers.py  test_json_patch.py  test_mcp_patch.py  test_openai_chat_completions_integration.py  test_openai_chat_completions_output.py  test_optional_dependencies.py  test_re_patches.py  test_similarity_search.py  test_taint.py  test_untaint_comprehensive.py  test_uuid_patches.py  utils.py
traces/: build_graph.py
(+397 files in other folders)
