# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Tell setuptools to look in src/ for packages
package-dir = {"" = "src"}
# Find all packages under src/
packages = ["agent_copilot", "static_analysis", "common", "runtime_tracing"]

[tool.setuptools.package-data]
# Include non-Python files like pyre configs
static_analysis = ["pyre_static_analysis/**/*"]
# If you have other config files in agent_copilot:
# agent_copilot = ["*.yaml", "*.json"]

[project.scripts]
# Console commands for the agent-copilot package
aco-launch = "agent_copilot.commands.launch:main"
aco-config = "agent_copilot.commands.config.config:main"
aco-server = "agent_copilot.commands.server:main"

[tool.black]
line-length = 100

[project]
name = "agent-copilot"
version = "0.1.0"
description = "A development tool for LLM call visualization and debugging"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    'GitPython==3.1.45',
    'Jinja2==3.1.6',
    'MarkupSafe==3.0.2',
    'PyMuPDF==1.26.3',
    'PyYAML-ft==7.0.1',
    'PyYAML==6.0.2',
    'Pygments==2.19.2',
    'TestSlide==2.7.1',
    'acres==0.5.0',
    'aiohappyeyeballs==2.6.1',
    'aiohttp==3.12.15',
    'aiosignal==1.4.0',
    'annotated-types==0.7.0',
    'anthropic==0.60.0',
    'anyio==4.9.0',
    'attrs==25.3.0',
    'beautifulsoup4==4.13.4',
    'boto3==1.38.17',
    'botocore==1.38.17',
    'cachetools==5.5.2',
    'certifi==2025.4.26',
    'cfgv==3.4.0',
    'chardet==5.2.0',
    'charset-normalizer==3.4.2',
    'ci-info==0.3.0',
    'click==8.1.7',
    'configobj==5.0.9',
    'configparser==7.2.0',
    'contourpy==1.3.2',
    'cycler==0.12.1',
    'dataclasses-json==0.5.7',
    'datasets==4.0.0',
    'dill==0.3.8',
    'diskcache==5.6.3',
    'distlib==0.4.0',
    'distro==1.9.0',
    'docker==7.1.0',
    'dotenv==0.9.9',
    'etelemetry==0.3.1',
    'fastcore==1.8.7',
    'filelock==3.18.0',
    'fonttools==4.57.0',
    'frozenlist==1.7.0',
    'fsspec==2025.3.0',
    'ghapi==1.0.6',
    'gitdb==4.0.12',
    'google-auth==2.40.3',
    'google-genai==1.29.0',
    'grpclib==0.4.8',
    'h11==0.16.0',
    'h2==4.2.0',
    'hf-xet==1.1.7',
    'hpack==4.1.0',
    'httpcore==1.0.9',
    'httplib2==0.22.0',
    'httpx==0.28.1',
    'huggingface-hub==0.34.3',
    'hyperframe==6.1.0',
    'identify==2.6.12',
    'idna==3.10',
    'importlib_metadata==8.7.0',
    'iniconfig==2.1.0',
    'intervaltree==3.1.0',
    'jiter==0.9.0',
    'jmespath==1.0.1',
    'jsonschema-specifications==2025.4.1',
    'jsonschema==4.25.0',
    'kiwisolver==1.4.8',
    'libcst==1.8.0',
    'linkify-it-py==2.0.3',
    'litellm==1.75.0',
    'looseversion==1.3.0',
    'lxml==6.0.0',
    'markdown-it-py==3.0.0',
    'marshmallow-enum==1.5.1',
    'marshmallow==3.26.1',
    'matplotlib==3.10.3',
    'mdit-py-plugins==0.4.2',
    'mdurl==0.1.2',
    'modal==1.1.1',
    'multidict==6.6.3',
    'multiprocess==0.70.16',
    'mypy_extensions==1.1.0',
    'networkx==3.4.2',
    'nibabel==5.3.2',
    'nipype==1.10.0',
    'nodeenv==1.9.1',
    'numpy==2.2.5',
    'openai',
    'pandas==2.3.0',
    'pathlib==1.0.1',
    'pillow==11.2.1',
    'pipdeptree==2.26.1',
    'pluggy==1.6.0',
    'pre_commit==4.2.0',
    'propcache==0.3.2',
    'protobuf==6.31.1',
    'prov==2.1.1',
    'psutil==7.0.0',
    'puremagic==1.30',
    'pyarrow==21.0.0',
    'pyasn1==0.6.1',
    'pyasn1_modules==0.4.2',
    'pydantic==2.11.4',
    'pydantic_core==2.33.2',
    'pydot==4.0.1',
    'pyparsing==3.2.3',
    'pyre-check==0.9.23',
    'pyre-extensions==0.0.32',
    'pytest==8.4.1',
    'python-dotenv==1.1.0',
    'pytz==2025.2',
    'pyxnat==1.6.3',
    'rdflib==7.1.4',
    'referencing==0.36.2',
    'regex==2025.7.34',
    'requests==2.32.4',
    'rich==14.1.0',
    'rpds-py==0.27.0',
    'rsa==4.9.1',
    's3transfer==0.12.0',
    'scipy==1.15.3',
    'shellingham==1.5.4',
    'sigtools==4.0.1',
    'simplejson==3.20.1',
    'smmap==5.0.2',
    'sniffio==1.3.1',
    'sortedcontainers==2.4.0',
    'soupsieve==2.7',
    'synchronicity==0.10.2',
    'tabulate==0.9.0',
    'tenacity==9.1.2',
    'textual==5.3.0',
    'tiktoken==0.10.0',
    'tokenizers==0.21.4',
    'toml==0.10.2',
    'tomli==2.2.1',
    'tomlkit==0.13.3',
    'tqdm==4.67.1',
    'traits==7.0.2',
    'typeguard==2.13.3',
    'typer==0.16.0',
    'types-certifi==2021.10.8.3',
    'types-toml==0.10.8.20240310',
    'typing-inspect==0.9.0',
    'typing-inspection==0.4.0',
    'typing_extensions==4.14.0',
    'tzdata==2025.2',
    'uc-micro-py==1.0.3',
    'unidiff==0.7.5',
    'urllib3==2.4.0',
    'virtualenv==20.33.1',
    'watchfiles==1.1.0',
    'websockets==15.0.1',
    'xxhash==3.5.0',
    'yarl==1.20.1',
    'zipp==3.23.0',
    'openai-agents==0.2.6'
]

[project.optional-dependencies]
dev = [
    'black==25.1.0',
    'pytest==8.4.1',
    'pre-commit==4.3.0'
]
