# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Tell setuptools to look in src/ for packages
package-dir = {"" = "src"}
# Find all packages under src/
packages = ["agent_copilot", "static_analysis", "common", "runtime_tracing", "telemetry"]

[tool.setuptools.package-data]
# Include non-Python files like pyre configs
static_analysis = ["pyre_static_analysis/**/*"]
# If you have other config files in agent_copilot:
# agent_copilot = ["*.yaml", "*.json"]

[project.scripts]
# Console commands for the agent-copilot package
aco-launch = "agent_copilot.commands.launch:main"
aco-config = "agent_copilot.commands.config.config:main"
aco-server = "agent_copilot.commands.server:main"

# Let's keep them around for now, aco-launch is confusing 
# when quickly showing the tool.
develop = "agent_copilot.commands.launch:main"
server = "agent_copilot.commands.server:main"

[tool.black]
line-length = 100

[project]
name = "agent-copilot"
version = "0.1.0"
description = "A development tool for LLM call visualization and debugging"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pyyaml", "dill"]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "pytest",
    "pre-commit",
    "responses",
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai"
]

examples = [
    "openai",
    "anthropic", 
    "openai-agents",
    "google-genai"
]
