# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Map aco package to src directory with subpackages
package-dir = {"aco" = "src"}
packages = ["aco", "aco.cli", "aco.common", "aco.runner", "aco.runner.monkey_patching", "aco.runner.monkey_patching.patches", "aco.server"]

[project.scripts]
# Console commands for the agent-copilot package
aco-launch = "aco.cli.aco_launch:main"
aco-config = "aco.cli.aco_config:main"
aco-server = "aco.cli.aco_server:main"

# Let's keep them around for now, aco-launch is confusing 
# when quickly showing the tool.
develop = "aco.cli.aco_launch:main"
server = "aco.cli.aco_server:main"

[tool.black]
line-length = 100

[project]
name = "agops"
version = "0.0.5"
description = "A development tool for LLM call visualization and debugging"
readme = "docs/PKG_README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
    "dill",
    "debugpy",
    "psutil",
    "psycopg2-binary",
    "python-dotenv",
    "fastapi",
    "flatten_dict",
    "flatten_json"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "pytest",
    "pre-commit",
    "responses",
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai",
    "hydra-core",
    "e2b_code_interpreter",
    "together",
    "langchain",
    "langchain-anthropic",
    "langchain-openai"
]

examples = [
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai"
]

docs = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin",
    "mkdocstrings[python]>=0.24",
]
