[project]
name = "ao-examples-langchain"
version = "0.1.0"
description = "AO debug examples for LangChain"
requires-python = ">=3.10"
dependencies = [
    "ao-dev",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
]

[tool.uv.sources]
ao-dev = { path = "../../..", editable = true }
